--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,9 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "Hello world"
+        run: eccho "Hello world"
       - name: multiline script
         run: |
           node -v
           npm -v
-          
