--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           pwd
           ls -a
-      - name
+      - name: Checkout
         run: actions/checkout@v1
       - name: List Files After Checkout
         run: |
