--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
           pwd
           ls -a
       - name: Checkout
-        run: actions/checkout@v3.0.2
+        uses: actions/checkout@v3.0.2
       - name: List Files After Checkout
         run: |
           pwd
