--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,11 @@
 name: Actions Workflow
 
-on: [push, pull_request]
+# on: [push, pull_request]
 
+on:
+  push:
+  pull_request:
+    types: [closed, opened, reopened, assigned]
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
