--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,11 @@ name: Actions Workflow
 # on: [push, pull_request]
 
 on:
-  push:
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
+
+  #  push:
   pull_request:
     types: [closed, opened, reopened, assigned]
 jobs:
