--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,6 +4,29 @@ env:
   WF_ENV: ${{ secrets.WF_ENV }}
 
 jobs:
+  create-issue:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Push a random file
+        run: |
+          pwd
+          ls -a
+          git init
+#          git remote add origin "https://github.com/mbrame-indeed/github-actions-test.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "my-bot@bot.com"
+          git config --global user.name "my-bot"
+          git fetch
+          git checkout master
+          git branch --set-upstream-to=origin/master
+          git pull
+          echo "*** WE HAVE JUST PULLED MASTER ***"
+          ls -a
+          echo $RANDOM >> random.txt
+          ls -a
+          git add -A
+          git commit -m "Added random file at `date`"
+          git push
   log-env:
     runs-on: ubuntu-latest
     env:
