--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,6 +3,14 @@ name: Container
 on: [push]
 
 jobs:
+  node-ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log node version
+        run: |
+          node -v
+          cat /etc/os-release
+
   node-docker:
     runs-on: ubuntu-latest
     container:
